Wed Jul 11 08:31:02 2001  Jeff Parsons <parsons@cs.wustl.edu>

        * tests/Dirent_Test.cpp:

          Wrapped a string literal with ACE_TEXT, to get rid of a Win2000
          WChar build error.

Wed Jul 11 06:41:43 2001  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>

  	* ace/TLI_Stream.cpp,
	* ace/TLI_Connector.cpp,
	* ace/TLI_Acceptor.cpp: Added enhancements so that the code would
	  work on Win32.  Thanks to Andreas Geisler
 	  <Andreas.Geisler@erl9.siemens.de> for reporting this.

Tue Jul 10 19:26:15 2001  Ossama Othman  <ossama@uci.edu>

	* ace/ace_dll.dsp:

	  Disabled generation of source browse information.  It was
	  causing problems on some existing builds that didn't use it.

	* ace/SSL/SSL_SOCK_Acceptor.cpp (ssl_accept):

	  Removed certificate verification code.  It is up to the
	  application, not the ACE_SSL library, to perform proper
	  certificate verification.

Tue Jul 10 23:02:00 2001  Craig Rodrigues  <crodrigu@bbn.com>

        * tests/Log_Msg_Test.cpp:
          Fix test so it doesn't open output file to write to twice.
          Thanks to Ossama for finding it.

Tue Jul 10 19:10:19 2001  Steve Huston  <shuston@riverace.com>

        * ace/ace.icc: Corrected the mis-applied patch for ace.icc in
          Mon Jul 09 19:12:42 2001  Steve Huston  <shuston@riverace.com>

Tue Jul 10 16:01:52 2001  Ossama Othman  <ossama@uci.edu>

	* THANKS:

	  Added Sangeetha Ramadurai <Sangeetha.Ramadurai@geind.ge.com> to
	  the hall of fame.

Tue Jul 10 18:15:39 2001  Steve Huston  <shuston@riverace.com>

        * ace/WFMO_Reactor.cpp (event_handling): Move the logic for
          noticing that the wait timed out, but did not expire any
          timers, into this function. Will remove it from Reactor.cpp,
          to properly move the fix into handle_events() rather than
          needing to call run_reactor_event_loop to get it right.
        * ace/Select_Reactor_T.cpp - still need to add similar logic here.
